--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
+    "heroku": "^7.59.2",
     "react": "^17.0.2",
     "react-chat-engine": "^1.11.21",
     "react-dom": "^17.0.2",
