--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "chattyrooms",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.11.0"
+  },
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.7.2",
