--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "chattyrooms",
   "version": "0.1.0",
   "engines": {
-    "node": "10.11.0"
+    "node": "16.13.0",
+    "npm": "8.1.0"
   },
   "private": true,
   "dependencies": {
