--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
+    "gh-pages": "^5.0.0",
     "heroku": "^7.59.2",
     "react": "^17.0.2",
     "react-chat-engine": "^1.11.21",
