--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chattyrooms",
   "version": "0.1.0",
+  "homepage": "https://Zmonea.github.io/capstoneprojectFrontEnd",
   "engines": {
     "node": "16.13.0",
     "npm": "8.1.0"
@@ -14,7 +15,6 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
-    "gh-pages": "^5.0.0",
     "heroku": "^7.59.2",
     "react": "^17.0.2",
     "react-chat-engine": "^1.11.21",
@@ -28,6 +28,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
